- Avoid using the @-operator for error suppression in NotifyServer.php to reduce bug risk.
- Eliminate die() in INTER-Mediator.php to reduce bug risk.
- Remove duplication in MessageStrings_ja.php and modify MessageStrings.php.
- Fix loading DB_Null.php in some cases.
- Add the 'memo' field in sample databases.
- The script to build the VM contains installation of samba and sharing the web root.
- [BUG FIX] The page editor title was "Definition File Editor" and correct it.
- [BUG FIX] The 'navi-control' behavior was sometimes wrong.
- [BUG FIX] Update TestDB.fmp12 to fix add a related record using portal access mode in 
  the sample application.
- [BUG FIX] Update files for the INTER-Mediator-Server virtual machine to fix issues of
  the page editor and the definition file editor etc.

Ver.5.0 (February 20, 2015) =====================================
[Major differences from Ver.4.0]
- The realtime multi-client updating with the Pusher (WebSocket).
- The Local Context and Context for DB Entities as the context model.
- Master/Detail style page can be built without JS program.
- Search and listing style page can be built without JS program.
- Calculation expression is supported.
- The "Soft-Delete" or "Logical-Delete" is implemented.
- IMLibChangeEventDispatch, IMLibMouseEventDispatch, IMLibKeyEventDispatch for dispatching events.
- HTML5's user defined attributes are supported.
- As for the FileMaker Server, the fmresultset schema is supported.
- Improve performance of portal access mode for FileMaker Server.
- [INFO] Internet Explorer Ver.8 is dropped out from the supporting browsers.
- [INFO] FileMaker Server 10 has been deprecated. In the near future, INTER-Mediator will require 
  FileMaker Server 11 or later if using FileMaker Server.
=================================================================

Ver.5.0 (February 20, 2015)
- The official INTER-Mediator website is http://inter-mediator.com/ with a new design.