@@ -7,10 +7,11 @@
 
 Vagrant.configure(2) do |config|
   config.vm.box = "INTER-Mediator-Server"
-  config.vm.box_url = "http://inter-mediator.com/archives/INTER-Mediator-Server-Ubuntu.box"
-  #config.vm.box_url = "file://./INTER-Mediator-Server.box"
+  config.vm.box_url = "http://inter-mediator.com/archives/INTER-Mediator-Server-Ubuntu-14.04.2.box"
+  #config.vm.box_url = "file://./INTER-Mediator-Server-Ubuntu-14.04.2.box"
   config.vm.network "private_network", ip: "192.168.56.101"
   config.vm.synced_folder '.', '/vagrant', disabled: true
+  #config.vm.synced_folder 'html/', '/var/www/html'
   config.vm.hostname = "inter-mediator-server"
   config.vm.post_up_message = "INTER-Mediator-Server is ready."
   config.vm.provider "virtualbox" do |vb|
@@ -18,13 +19,13 @@ Vagrant.configure(2) do |config|
     vb.memory = "1024"
     vb.name = "INTER-Mediator-Server"
   end
-  
+
   config.ssh.username = "developer"
   config.ssh.password = "im4135dev"
   config.ssh.pty = true
-  
+
   ## provisioning by shell script
-  config.vm.provision "shell", path: "https://raw.githubusercontent.com/INTER-Mediator/INTER-Mediator/master/dist-docs/vm-for-trial/deploy.sh"
+  config.vm.provision "shell", path: "deploy.sh"
   # Testing by msyk's repository file
   #config.vm.provision "shell", path: "https://raw.githubusercontent.com/msyk/INTER-Mediator/master/dist-docs/vm-for-trial/deploy.sh"
 
